--- a/loginform.html
+++ b/loginform.html
@@ -10,11 +10,10 @@
 
 <body>
 
-    <ul><a href="http://das" target="_blank" rel="noopener noreferrer"></a></ul>
-    <ul><a href="http://das" target="_blank" rel="noopener noreferrer"></a></ul>
-    <ul><a href="http://das" target="_blank" rel="noopener noreferrer"></a></ul>
-    <ul><a href="http://das" target="_blank" rel="noopener noreferrer"></a></ul>
-    <ul><a href="http://das" target="_blank" rel="noopener noreferrer"></a></ul>
+    <form action="" method="post">
+        <input type="text">
+        <button>submit</button>
+    </form>
 
 
 </body>
