logine link eklendi

--- a/loginform.html
+++ b/loginform.html
@@ -11,7 +11,7 @@
 <body>
     <p>Dignissimos ullam inventore placeat eveniet corporis.</p>
     <p>Maiores quidem at eum voluptatem excepturi.</p>
-
+    <a href="http://" target="_blank" rel="noopener noreferrer"></a>
 
 </body>
 
